Cleaning up some things

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,6 @@
 [tool:pytest]
-addopts = tests
-          --strict
-          --cov tests
-          --cov serializers 
+addopts = --strict
+          --cov crypto_file
           --color yes
           --cov-branch
           --cov-fail-under 100
