--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,8 @@ language: python
 sudo: required
 python:
   - "2.7"
+install:
+  - pip install python-coveralls
 script: "python setup.py test"
+after_success:
+  - coveralls
